Refactored routes to use controllers

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,4 @@ PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/coffeeShop
 RESEND_API_KEY=re_SEL2tagu_49zX2TiNFtzfNatAQt8eqZih
 JWT_SECRET=fc4d9e646c147ed8b577e60fa59ddab9
+EMAIL_FROM=onboarding@resend.dev
